--- a/02_webpack配置文件(css)/package.json
+++ b/02_webpack配置文件(css)/package.json
@@ -13,9 +13,15 @@
     "webpack-cli": "^4.9.1"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.0",
+    "browserslist": "^4.18.1",
     "css-loader": "^6.5.1",
     "less": "^4.1.2",
     "less-loader": "^10.2.0",
+    "postcss": "^8.4.1",
+    "postcss-cli": "^9.0.2",
+    "postcss-loader": "^6.2.0",
+    "postcss-preset-env": "^7.0.1",
     "style-loader": "^3.3.1"
   }
 }
